--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PropTrack - NHL Player Line Tracker</title>
+    <title>DangleData - NHL Player Line Tracker</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="styles/main.css">
 </head>
@@ -11,7 +11,7 @@
     <div class="container">
         <!-- Header -->
         <div class="header-row">
-            <h1>🏒 PropTrack</h1>
+            <h1>🏒 DangleData</h1>
             <button class="dark-mode-toggle" onclick="window.proptrack.toggleDarkMode()">🌙 Dark Mode</button>
         </div>
         <p class="subtitle">NHL Player Prop Analytics & Betting Line Tracker</p>
