--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <!-- Game Log Modal -->
     <div id="gameLogModal" class="game-log-modal">
         <div class="modal-content">
-            <span class="close-modal" onclick="window.proptrack.closeModal()">&times;</span>
+            <span class="close-modal" onclick="(window.proptrack?.closeModal || window.nflProptrack?.closeModal || function(){document.getElementById('gameLogModal').style.display='none'})()">&times;</span>
             <div id="modalContent"></div>
         </div>
     </div>
